# Secure-File-Shredder-and-Data-Sanitization-Framework-Rust-CLI

./: README.md
sanitizer/: Cargo.toml  README.md
sanitizer/src/: error.rs  lib.rs  main.rs
sanitizer/src/audit/: mod.rs
sanitizer/src/crypto/: aead.rs  hashing.rs  kdf.rs  mod.rs  rng.rs  secure_mem.rs
sanitizer/src/report/: mod.rs
sanitizer/src/sanitize/: directory.rs  engine.rs  metadata.rs  mod.rs  patterns.rs
sanitizer/src/snapshot/: mod.rs
sanitizer/src/storage/: device.rs  filesystem.rs  mod.rs
sanitizer/src/vault/: mod.rs
sanitizer/src/verify/: mod.rs
